debug.txt
|||>|||>|||>|||>|||>|||>|||>  File "<stdin>", line 1
    x = 
        ^
SyntaxError: invalid syntax
|||>|||>--- 1
|||>|||>|||>|||>|||>|||>